Fix bad alignment on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -6,9 +6,6 @@ img {
   padding: 25px;
   margin: 25px;
 }
-.row {
-  align-items: center;
-}
 
 .footer {
   position: relative;
